[package]
name = "async-sqlite"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "A library for working with sqlite asynchronously"

[dependencies]
crossbeam = { version = "0.8.2" }
futures-channel = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
num_cpus = { version = "1.16.0" }
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dev-dependencies]
async-std = { version = "1.12.0" }
futures = { version = "0.3.28" }
tempfile = { version = "3.6.0" }
test-async-macro = { path = "test-async-macro" }
tokio = { version = "1.29.1", features = ["rt"] }
