[package]
name = "async-sqlite"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "A library for working with sqlite asynchronously"

[dependencies]
crossbeam = { version = "0.8.2" }
futures-channel = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
num_cpus = { version = "1.16.0" }
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dev-dependencies]
async-std = { version = "1.12.0" }
paste = { version = "1.0.12" }
tempfile = { version = "3.6.0" }
tokio = { version = "1.29.1", features = ["rt"] }
