[package]
name = "async-sqlite"
version = "0.1.0"
authors = ["Ryan Fowler"]
edition = "2021"
license = "MIT"
description = "A library for working with sqlite asynchronously"
repository = "https://github.com/ryanfowler/async-sqlite"
documentation = "https://docs.rs/async-sqlite"
keywords = ["sqlite", "sqlite3", "rusqlite", "async", "tokio"]
categories = ["database"]

[features]
default = ["bundled"]
array = ["rusqlite/array"]
backup = ["rusqlite/backup"]
blob = ["rusqlite/blob"]
bundled = ["rusqlite/bundled"]
bundled-full = ["rusqlite/bundled-full"]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
bundled-sqlcipher-vendored-openssl = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
chrono = ["rusqlite/chrono"]
csv = ["rusqlite/csv"]
csvtab = ["rusqlite/csvtab"]
functions = ["rusqlite/functions"]
hooks = ["rusqlite/hooks"]
limits = ["rusqlite/limits"]
load_extension = ["rusqlite/load_extension"]
modern-full = ["rusqlite/modern-full"]
serde_json = ["rusqlite/serde_json"]
session = ["rusqlite/session"]
sqlcipher = ["rusqlite/sqlcipher"]
time = ["rusqlite/time"]
trace = ["rusqlite/trace"]
unlock_notify = ["rusqlite/unlock_notify"]
url = ["rusqlite/url"]
uuid = ["rusqlite/uuid"]
vtab = ["rusqlite/vtab"]
window = ["rusqlite/window"]

[dependencies]
crossbeam-channel = { version = "0.5.8" }
futures-channel = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
num_cpus = { version = "1.16.0" }
rusqlite = { version = "0.30.0" }

[dev-dependencies]
async-std = { version = "1.12.0" }
paste = { version = "1.0.12" }
tempfile = { version = "3.6.0" }
tokio = { version = "1.29.1", features = ["rt"] }
